--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             </a>
         </div>
     </nav>
+    <!-- Jumbotron -->
+    <div class="pb-3 mb-4 bg-light rounded-3">
+        <h1 class="display-5 fw-bold">Starbuccaneers</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam alias id natus, perspiciatis tempora dicta, dolores facilis deserunt modi voluptatem delectus odio in reiciendis? Deserunt fuga quisquam officiis dicta velit.</p>
+    </div>
     <!-- Bootstrap JavaScript with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
