--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         <h1 class="display-5 fw-bold">Starbuccaneers</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam alias id natus, perspiciatis tempora dicta, dolores facilis deserunt modi voluptatem delectus odio in reiciendis? Deserunt fuga quisquam officiis dicta velit.</p>
     </div>
+    <!-- Cards -->
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+        </div>
+    </div>
+
     <!-- Bootstrap JavaScript with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
