working on styling navbar

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 </head>
 <body>
     <!-- nav -->
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24"
                     class="d-inline-block align-text-top">
-                Starbuccaneers
+                <span class="ml-3 font-weight-bold">Starbuccaneers</span>
             </a>
         </div>
     </nav>
     <!-- Jumbotron -->
-    <div class="pb-3 mb-4 bg-light rounded-3">
+    <div class="pb-3 mb-4 bg-light rounded-3 shadow-sm">
         <h1 class="display-5 fw-bold">Starbuccaneers</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam alias id natus, perspiciatis tempora dicta, dolores facilis deserunt modi voluptatem delectus odio in reiciendis? Deserunt fuga quisquam officiis dicta velit.</p>
     </div>
