adjusted the container for jumbotron

--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
         </div>
     </nav>
     <!-- Jumbotron -->
-    <div class="pb-3 mb-4 bg-light rounded-3 shadow-sm">
-        <h1 class="display-5 fw-bold">Starbuccaneers</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam alias id natus, perspiciatis tempora dicta, dolores facilis deserunt modi voluptatem delectus odio in reiciendis? Deserunt fuga quisquam officiis dicta velit.</p>
-    </div>
+        <div class="pb-3 mb-4 bg-light rounded-3 shadow-sm">
+            <div class="container-fluid">
+                <h1 class="display-5 fw-bold">Starbuccaneers</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam alias id natus, perspiciatis tempora dicta,
+                dolores facilis deserunt modi voluptatem delectus odio in reiciendis? Deserunt fuga quisquam officiis dicta
+                velit.
+                </p>
+            </div>
+        </div>
     <!-- Cards -->
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
