updated cards with shadow and added image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm">
-                <div class="card" style="width: 20rem;">
+                <div class="card shadow" style="width: 20rem;">
+                    <img src="./assets/img/coffee cups.jpg" class="card-img-top" alt="Image of coffee cups" style="height: 30rem">
+                    <div class="card-body">
+                        <p class="card-text">
+                            All your favourite coffees from the groggocino 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card shadow" style="width: 20rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">
@@ -63,17 +73,7 @@
                 </div>
             </div>
             <div class="col-sm">
-                <div class="card" style="width: 20rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's content.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm">
-                <div class="card" style="width: 20rem;">
+                <div class="card shadow" style="width: 20rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">
